welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:12: error: too many arguments for method growFlowers: ()Unit
growFlowers(Color.red) 
           ^